# RustyDB

./: Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
benches/: kv_bench.rs  sql_bench.rs  stress_test_bench.rs
benches/compare/: bench_compare.py  docker-compose.mysql.yml  results-0.3.0-beta-2026-06-21.csv
src/: kvstore.rs  lib.rs  lock.rs  main.rs  persistence.rs  recovery.rs  server.rs  version_check.rs
src/sql/: database.rs  executor.rs  mod.rs  parser.rs  planner.rs  types.rs
src/wire/: mod.rs  protocol.rs
tests/: test_data.sql  test_wire_python.py  wire_integration.rs
